<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZXingDemo</string>

    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may
        need to restart the device.
    </string>

    <string name="qrcode__hint">Put QR deviceNumber in the scanning frame</string>
    <string name="barcode_hint">Put Bar deviceNumber in the scanning frame</string>

    <string name="qrcode_handshake">Scan</string>
    <string name="qrcode_search">Search</string>
    <string name="qrcode_multiple">Multiple</string>

    <string name="qrcode_off_light">off</string>
    <string name="qrcode_on_light">on</string>


    <string name="hs_scan_failed">Scan failed.Only support QR code scanning.</string>
    <string name="search_scan_failed">Scan failed.Only support barcode scanning.</string>
    <string name="multiple_scan_failed">Scan failed.Only support barcode scanning.</string>

</resources>
